# Copyright (c) 2023 Huawei Technologies Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

napi_sources = [
  "//napi/callback_scope_manager/native_callback_scope_manager.cpp",
  "//napi/module_manager/module_load_checker.cpp",
  "//napi/module_manager/native_module_manager.cpp",
  "//napi/native_engine/native_api.cpp",
  "//napi/native_engine/native_async_work.cpp",
  "//napi/native_engine/native_engine.cpp",
  "//napi/native_engine/native_engine_interface.cpp",
  "//napi/native_engine/native_node_api.cpp",
  "//napi/native_engine/native_safe_async_work.cpp",
  "//napi/reference_manager/native_reference_manager.cpp",
  "//napi/scope_manager/native_scope_manager.cpp",
  "//napi/utils/log.cpp",
]

declare_args() {
  napi_enable_container_scope = true
  napi_enable_memleak_debug = true
}
